--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 			<div class="col-md-12 col-lg-6">
-				<div class="panel panel-default">
+				<div class="panel panel-info">
 					<div class="panel-heading">
 						Permisos concedidos
 					</div>
